--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,17 @@
 
     <main>
       <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <load src="./partials/hero.html" />
+      <load src="./partials/about-us.html" />
+      <load src="./partials/our-yachts.html" />
+      <load src="./partials/advantages.html" />
+      <load src="./partials/rent-yacht.html" />
+      <load src="./partials/reviews.html" />
+      
     </main>
 
     <load src="./partials/footer.html" />
 
-    <script type="module" src="./main.js"></script>
+    <script src="./menu.js"></script>
   </body>
 </html>
